[project]
name = "pyhtml-enhanced"
version = "2.3.0"
description = "A library for building HTML documents with a simple and learnable syntax"
authors = [{ name = "Maddy Guthridge", email = "maddy.guthridge@unsw.edu.au" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ['html', 'template', 'pyhtml', 'markup', 'documentation']
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
    "Typing :: Typed",
]
dependencies = ["typing-extensions >=4.12.2"]

[project.urls]
homepage = "https://comp1010unsw.github.io/pyhtml-enhanced/"
repository = "https://github.com/COMP1010UNSW/pyhtml-enhanced"
documentation = "https://comp1010unsw.github.io/pyhtml-enhanced/"
"Bug Tracker" = "https://github.com/COMP1010UNSW/pyhtml-enhanced/issues"


[dependency-groups]
dev = ["pytest>=7.4.2,<10.0.0", "mypy>=1.19.0", "coverage>=7.13.1", "requests>=2.32.5", "types-requests>=2.32.4.20250913", "pyyaml>=6.0.3", "types-pyyaml>=6.0.12.20250915", "flask>=3.1.2", "pytest-mypy-plugins>=3.0.0", "ruff>=0.14.10"]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.7.1", "mkdocstrings[python]>=0.26,<1.1", "mkdocs-awesome-pages-plugin>=2.9.3", "mkdocs-section-index>=0.3.10"]

[build-system]
requires = ["uv_build>=0.7.20,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pyhtml"
module-root = ""

[tool.mypy]
check_untyped_defs = true
files = ["pyhtml", "tests", "generator"]
exclude = ['generator/templates/*']

[tool.ruff]
line-length = 79
exclude = ['generator/templates']

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.per-file-ignores]
"pyhtml/__tags/input_tag.py" = [
    # Line too long
    "E501",
]
"pyhtml/__tags/generated.py" = [
    # Line too long
    "E501",
]

[tool.pytest.ini_options]
addopts = "--doctest-glob README.md --doctest-glob docs/**.md"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    'if TYPE_CHECKING:',
    'return NotImplemented',
    '@overload',
    'raise AssertionError',
    'raise NotImplementedError',
]

